tests/architecture/fixtures/valid/outer-adapters.ts
export class BrowserAdapter { read() { return window.localStorage; } }
