tests/architecture/fixtures/invalid/order-command-boundaries/return-order-writer.ts
export function invalidReturnOrderWriter(store: { replaceOrderCommandRecords(records: unknown[]): void }) {
  store.replaceOrderCommandRecords([]);
}
